completed content comparison for bundle

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -98,7 +98,12 @@
                         </li>
                         <li class="menu-item contents">
                             <a href="{{ path('app_comparison_contents') }}" class="menu-link">
-                                <div data-i18n="Without navbar">Contents</div>
+                                <div data-i18n="Without navbar">Content Diffs</div>
+                            </a>
+                        </li>
+                        <li class="menu-item contentstructure">
+                            <a href="{{ path('app_comparison_contents') }}" class="menu-link">
+                                <div data-i18n="Without navbar">CMS API Structure (BULK)</div>
                             </a>
                         </li>
 
