completed modified contents

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -98,14 +98,14 @@
                         </li>
                         <li class="menu-item contents">
                             <a href="{{ path('app_comparison_contents') }}" class="menu-link">
-                                <div data-i18n="Without navbar">Content Diffs</div>
+                                <div data-i18n="Without navbar">Contents</div>
                             </a>
                         </li>
-                        <li class="menu-item contentstructure">
-                            <a href="{{ path('app_comparison_contents') }}" class="menu-link">
-                                <div data-i18n="Without navbar">CMS API Structure (BULK)</div>
-                            </a>
-                        </li>
+{#                        <li class="menu-item contentstructure">#}
+{#                            <a href="{{ path('app_comparison_contents') }}" class="menu-link">#}
+{#                                <div data-i18n="Without navbar">Structure</div>#}
+{#                            </a>#}
+{#                        </li>#}
 
                     </ul>
                 </li>
